--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,10 @@
     <title>Vite Template</title>
   </head>
   <body>
-    <h1>HOLA</h1>
+    <!--
+    <button id="button">CLICK ME</button>-->
+    <h1 id="hearing">Soy un título</h1>
+    <p>esperando entrada de teclado</p>
     <script type="module" src="./js/index.js"></script>
   </body>
 </html>
